@@ -2148,6 +2148,13 @@ bool AddressWidget::sendEmail(const string& address, const string& subject)
   // ############################################################################
 }
 
+void AddressWidget::mail(const char* address)
+{
+  // ############################################################################
+  sendEmail(address);
+  // ############################################################################
+}
+
 // #############################################################################
 // MOC OUTPUT FILES:
 #include "kab.moc"
