@@ -9,3 +9,8 @@ October 10, 1998:
 	they manage inside their inner frame. I usually create this widgets 
 	with qtarch. 
 	And I started to write the NEWS file :-)
+October 24, 1998:
+	You may click on the email address in the about dialog to send me an
+	email now.
+
+
